add search index

--- a/社群及NGO文件/手册指南/雌二醇凝胶自制方法/雌二醇凝胶自制方法.md
+++ b/社群及NGO文件/手册指南/雌二醇凝胶自制方法/雌二醇凝胶自制方法.md
@@ -173,20 +173,20 @@ pH试纸很推荐购买，原因提及过。
 
 待补充。
 
-> 附加信息 [Processed Page Metadata]
->
-> | Attribute       | Value                                  |
-> |-----------------|----------------------------------------|
-> | Filename        | 雌二醇凝胶自制方法.md                             |
-> | Type            | webpage                                 |
-> | Format          | Markdown                               |
-> | Size            | 11962 bytes                           |
-> | MD5             | 29904478ff6d297f34b25c5b61f3fa31                                  |
-> | Original Link   | [[Unknown link(update needed)]]([Unknown link(update needed)])                         |
-> | Creator         | [Unknown creator(update needed)]                              |
-> | Date            | [Unknown date(update needed)]                                 |
-> | Archived Date   | [Unknown archived date(update needed)]                             |
-> | Tags            | [Unknown tags(update needed)]                                 |
+附加信息 [Processed Page Metadata]
+
+| Attribute       | Value                                  |
+|-----------------|----------------------------------------|
+| Filename        | 雌二醇凝胶自制方法.md                             |
+| Type            | webpage                                 |
+| Format          | Markdown                               |
+| Size            | 11962 bytes                           |
+| MD5             | 29904478ff6d297f34b25c5b61f3fa31                                  |
+| Original Link   | [[Unknown link(update needed)]]([Unknown link(update needed)])                         |
+| Creator         | [Unknown creator(update needed)]                              |
+| Date            | [Unknown date(update needed)]                                 |
+| Archived Date   | [Unknown archived date(update needed)]                             |
+| Tags            | [Unknown tags(update needed)]                                 |
 >
 > 本文由跨性别中文数字档案馆归档整理，仅供浏览。版权归原作者所有。
 >
