--- a/杂志及新闻报道/中国大陆/人民日报_1992_首例女变男变性手术成功_page.md
+++ b/杂志及新闻报道/中国大陆/人民日报_1992_首例女变男变性手术成功_page.md
@@ -20,7 +20,7 @@
 | Format          | PDF Document                               |
 | Size            | 1902043 bytes                           |
 | MD5             | e76c1852dccd0515cced27e8d103af7b                                  |
-| Archived Date   | [Unknown archived date(update needed)]                             |
+| Archived Date   | 2025-01-10                             |
 | Original Link   | [Unknown link(update needed)]                         |
 | Author          | 人民日报                               |
 | Region          | 中国大陆                               |
