--- a/文学作品和艺术创作/其他/801137525-野史3-为防止拼多多盗印暂不提供封面_page.md
+++ b/文学作品和艺术创作/其他/801137525-野史3-为防止拼多多盗印暂不提供封面_page.md
@@ -20,7 +20,7 @@
 | Format          | PDF Document                               |
 | Size            | 33268338 bytes                           |
 | MD5             | c497cd4ec54fd0e79aab6e9837ac7e85                                  |
-| Archived Date   | [Unknown archived date(update needed)]                             |
+| Archived Date   | 2025-01-10                             |
 | Original Link   | [Unknown link(update needed)]                         |
 | Author          | 释明空先辈                               |
 | Region          | 未知                               |
