--- a/杂志及新闻报道/中国大陆/一口吞下18粒右美沙芬，他瘫在床上青少年滥用药品现象调查_2023__page.md
+++ b/杂志及新闻报道/中国大陆/一口吞下18粒右美沙芬，他瘫在床上青少年滥用药品现象调查_2023__page.md
@@ -20,7 +20,7 @@
 | Format          | PDF Document                               |
 | Size            | 2740146 bytes                           |
 | MD5             | 75839c68a331fa7ab206f6d7fa23f977                                  |
-| Archived Date   | [Unknown archived date(update needed)]                             |
+| Archived Date   | 2025-01-10                             |
 | Original Link   | [Unknown link(update needed)]                         |
 | Author          | 法治日报                               |
 | Region          | 中国大陆                               |
