--- a/杂志及新闻报道/中国大陆/人民日报_1993_我国变性手术达到世界先进水平_page.md
+++ b/杂志及新闻报道/中国大陆/人民日报_1993_我国变性手术达到世界先进水平_page.md
@@ -20,7 +20,7 @@
 | Format          | PDF Document                               |
 | Size            | 1848295 bytes                           |
 | MD5             | 34eea651a3753f5fe651fdd566cfae59                                  |
-| Archived Date   | [Unknown archived date(update needed)]                             |
+| Archived Date   | 2025-01-10                             |
 | Original Link   | [Unknown link(update needed)]                         |
 | Author          | 人民日报                               |
 | Region          | 中国大陆                               |
