--- a/社群及NGO文件/统计报告/2013年扭转治疗调查报告_page.md
+++ b/社群及NGO文件/统计报告/2013年扭转治疗调查报告_page.md
@@ -20,7 +20,7 @@
 | Format          | PDF Document                               |
 | Size            | 1779749 bytes                           |
 | MD5             | 1a5cb51a9c59530a9d8101657f3195a7                                  |
-| Archived Date   | [Unknown archived date(update needed)]                             |
+| Archived Date   | 2025-01-10                             |
 | Original Link   | [Unknown link(update needed)]                         |
 | Author          | 北京同志中心扭转治疗调研组                               |
 | Region          | 中国大陆                               |
