--- a/社群及NGO文件/统计报告/反家暴法_在跨性别群体中的应用实况_及跨性别群体对反家暴法的_改进建议2017_page.md
+++ b/社群及NGO文件/统计报告/反家暴法_在跨性别群体中的应用实况_及跨性别群体对反家暴法的_改进建议2017_page.md
@@ -20,7 +20,7 @@
 | Format          | PDF Document                               |
 | Size            | 1650121 bytes                           |
 | MD5             | c23598f3a536d03f8541810b5fca1252                                  |
-| Archived Date   | [Unknown archived date(update needed)]                             |
+| Archived Date   | 2025-01-10                             |
 | Original Link   | [Unknown link(update needed)]                         |
 | Author          | 跨儿中心                               |
 | Region          | 中国大陆                               |
