--- a/政府及官方组织文件/港澳台/臺北榮民總醫院多元性別友善就醫環境作業指導書_2022_page.md
+++ b/政府及官方组织文件/港澳台/臺北榮民總醫院多元性別友善就醫環境作業指導書_2022_page.md
@@ -7,9 +7,11 @@
 ## 摘要
 
 <!-- tcd_abstract -->
-本文件为《臺北榮民總醫院多元性別友善就醫環境作業指導書》，旨在建构一个友好的医疗环境，以提升多元性别者的身心健康。文件详细定义了多元性别的涵义，包括女同志、男同志、双性恋及跨性别者，再者阐述了本院在推行性别平等的政策。内容中提出了多项重要原则，如不歧视多元性别者、医护人员需接受相关培训，以及提供多元性别友善的照护等。
+《臺北榮民總醫院多元性別友善就醫環境作業指導書》旨在建立一个支持多元性别者的友善医疗环境，以维护他们的身心健康。文件于111年10月26日发布，内容涵盖了对多元性别（LGBT）群体的清晰定义，该定义包括女同志、男同志、双性恋和跨性别者。通过设立性别平等工作小组，推动性别平等的观念，文件明确提出了不歧视多元性别者的政策，不论是在就医、探病还是在医院工作等场合。医护人员需接受与同志友善医疗相关的培训，以避免误解和歧视。分析指出，无论是在医院环境中，还是在相关的活动与服务中，提供多元性别友好的氛围是至关重要的。 
 
-文中还详尽列出了构建友好医疗场所的具体措施，包括提供友善的标识和信息、尊重患者的性别认同以及建立性别友善的咨询氛围等。文件强调尊重隐私权，探讨了如何适当地称呼跨性别朋友，承诺保护与性倾向及性别身份相关的私人信息。最后，文件提及医院为患者提供的各种设施，如性别友善厕所及母乳哺育室，展示了医院为多元性别者构建友好环境的努力和成果。
+具体来说，文件中提到要在就医场合提供友善的符号和标语来显现医院对多元性别者的支持，医护人员在称呼病人时应该避免使用传统的‘先生’或‘小姐’的称谓，而是应该询问病人如何称呼自己。这种做法特别针对需要长期住院或回诊的跨性别病人，尊重他们的性别认同带来安心感。此外，文件强调了病人隐私的保障，以及在询问性倾向及医疗措施时的礼貌与敏感。 
+
+文件还设有性别友善的设施，比如性别友善厕所和亲子厕所，以适应多元性别者的需求。并针对母乳喂养提供专门的哺乳室，确保母亲和婴儿的舒适与隐私。文件末尾列出了一些参考资料，用以支持这些政策和措施，强调了多元性别友好的医疗环境不仅对病人重要，也为医院的工作人员创造了更加友好的工作氛围。
 
 <!-- tcd_abstract_end -->
 
@@ -27,10 +29,9 @@
 | Author          | 臺北榮民總醫院                               |
 | Region          | 台湾                               |
 | Date            | 2022-10-26                                 |
-| Tags            | 跨性别, 多元性别, 医疗环境, 性别友善, 医院政策, 医疗照护, 性别平等运动, LGBTQ+                                 |
+| Tags            | 多元性别, 友善医疗, 跨性别, 医疗资源, 性别平等, 社会环境, 医疗政策                                 |
 
-本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有。
-
+本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有，所有内容仅为历史资料保存及研究之用。如果原作者或相关方希望移除存档内容，请通过电子邮件与我们联系。
 
 ## 正文 { data-search-exclude }
 
