--- a/政府及官方组织文件/港澳台/香港性教育現狀與挑戰報告_2021_page.md
+++ b/政府及官方组织文件/港澳台/香港性教育現狀與挑戰報告_2021_page.md
@@ -7,7 +7,11 @@
 ## 摘要
 
 <!-- tcd_abstract -->
-本文件是关于香港的性教育现状及挑战的报告，指出香港在性教育方面的严重滞后，尤其是在性别多元社群的教育内容上不足。报告中提到，传统观念导致性玕不可讨论，严重影响性别教育的推广。教育工作者提到需要建立安全的环境，让学生能够自由提问。然而，实际调查显示，性教育的效果不理想，且目前的教育政策自1997年就未作修订，无法适应现在的需求。报告还强调了 网上性骚扰问题的上升，与性教育及性骚扰的密切关系，强调教师们对性别传统观念的坚持也是推广性的主要障碍。香港教育大学的郭勤博士指出，性教育应当涵盖同性恋及性别认同等议题，呼吁对非二元性别群体的关注，以便改善现有教育体制，使其更加包容和全面。
+该文件为《香港性教育現狀與挑戰報告》，由香港01于2021年12月14日发布，旨在探讨香港的性教育现状及其面临的挑战。报告指出，香港的性教育落后于社会需求，尤其是在性别多元社群的描绘上，表现出明显的不足。传统观念将性视为不可讨论，严重影响了性别教育的推广和社会对性教育的重视。报告中提及，推动性别教育需要一个“安全空间”，以让学生能够自在地提问和探索性相关议题，但许多学生因缺乏机会和渠道而年复一年无法提出疑虑，形成了一种教育闭环。另外，性教育与性骚扰问题息息相关。报告引述平机会上高级政策研究主任陈建成的话指出，自疫情以来，线上性骚扰案件的增加已成为不可忽视的现象，相关的数据统计显示，自2019年以来，有过千名学生表示曾遭遇网上性骚扰。
+
+MWYO青年办公室在2021年初进行的调查反映出性别教育的现状不容乐观。尽管教育局自1997年发布《学校性教育指引》以来并没有进行有效的修订，香港的性教育推广效果严重滞后，常常面临着宗教和传统观念的压制。报告特别强调地方在推广性教育方面面临的障碍，传统校规如对性别服装的强制要求、学生的发型规定等，无不反映出性别刻板印象。如果性别认同与生理特征不符的学生常常面临社会压力而感到不适，进一步加剧了性别教育的困境。
+
+在这份报告中，香港教育大学特殊教育与辅导学系副教授郭勤博士的观点指出，性教育的内容不应仅限于传统的二元性别应有探索，而应覆盖包括同性恋、性别认同等更为多元的主题。这种对性别多元社群的缺乏理解，不但影响了学生对不同性别认同的认识，也阻碍了社会对性别多元性的全面接纳。推动性教育变革需要重新审视和修订教育方针，打造一个尊重多元的教育环境，才能为未来的性教育奠定基础。
 
 <!-- tcd_abstract_end -->
 
@@ -25,10 +29,9 @@
 | Author          | 香港01                               |
 | Region          | 香港                               |
 | Date            | 2021-12-14                                 |
-| Tags            | 香港, 性教育, 性别多元, 传统观念, 性骚扰, 非二元性别, 教育改革                                 |
+| Tags            | 性教育, 性别多元, 社会新闻, 香港, 性骚扰, 教育现状, MWYO青年办公室, 郭勤, 平机会                                 |
 
-本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有。
-
+本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有，所有内容仅为历史资料保存及研究之用。如果原作者或相关方希望移除存档内容，请通过电子邮件与我们联系。
 
 ## 正文 { data-search-exclude }
 
