--- a/政府及官方组织文件/港澳台/高雄市性別友善觀光報告_2023_page.md
+++ b/政府及官方组织文件/港澳台/高雄市性別友善觀光報告_2023_page.md
@@ -7,7 +7,15 @@
 ## 摘要
 
 <!-- tcd_abstract -->
-该文件是由高雄市政府观光局发布的《关于高雄市性别友善观光的报告》。报告围绕高雄市如何落实性别平等的国际公约CEDAW（消除对妇女一切形式歧视公约）展开，强调了政府在推动性别友好环境与旅游体验方面所做的努力。文中提到，随着高雄的发展，政府致力于消除性别歧视，建立友善的旅游环境，包括友善的厕所在内的多重设施、友好的住宿安排以及友善的旅游路线。文件还详细列出了高雄在支持LGBTQ+群体、促进性别权利方面的历史和现状，包括过去的同志游行与性别友善政策的实施，目的是打造一个欢迎所有性别样貌的城市。
+该文件是《高雄市性别友善观光报告（2023）》的PDF文档，主要由高雄市政府观光局发布。报告深入探讨了高雄市如何在观光领域实施性别友善政策，创造一个包容和支持多元性别的旅游环境。文件中详细阐述了根据《消除对妇女一切形式歧视公约》（CEDAW）精神所采取的各项措施，包括友善廁所、友善旅宿和友善游程的建设。 
+
+文件指出，高雄市致力于成为一个国际化的人权城市，特别是在性别平等和多元性别权利方面的实践。报告中提到，台湾在2007年签署CEDAW，强调需遵循其核心原则，确保所有市民在政治、社会、经济、文化等领域享有平等待遇。为此，高雄市政府在实际上推动了多个友善的旅游设施与服务，包括友善厕所的建设和改善，确保所有游客都能享受到安全、干净和便利的公共设施。 
+
+报告中提到的统计数据展示了高雄在LGBTQ+友善旅游方面的重要成就。根据过去十年的统计资料，市内的观光旅店数量及入住人次显示出在性别友善和多元文化环境中形成的良性循环。报告具体列举了友善厕所的各项改善措施，如增加通风明亮度，采取措施消除公厕卫生死角，确保游客的人身安全，形成一个无障碍和安全友好的环境。同时，高雄还推出了多条基于性别友善理念的旅游路线，并对从业人员进行性别平等意识的培训。
+
+高雄市还积极推动各类友善旅宿，旨在通过一系列的座谈会和认证过程来鼓励旅游业者提供更友好的服务。报告强调，这些措施不仅有助于消除性别偏见和歧视，更有助于提升高雄的国际形象和吸引力。旅宿业者和性别专家、学者的共同参与也为城市的性别友善氛围的建设提供了多样性的视角。作为响应CEDAW及推动性别平等的城市，高雄在该方面不断进行创新与实践。
+
+最后，文件以高雄市政府升起多元彩虹旗以庆祝国际不再恐同日为例，彰显了高雄对LGBTQ+友善城市形象的重视与承诺，展现出高雄在迈向现代化宜居城市的过程中，如何通过友善的政策和实践来实现多元性别的平等与尊重。
 
 <!-- tcd_abstract_end -->
 
@@ -25,10 +33,9 @@
 | Author          | 高雄市政府观光局                               |
 | Region          | 台湾                               |
 | Date            | 2023-05-17                                 |
-| Tags            | 高雄市, 性别友善, CEDAW, LGBTQ+, 旅游, 性别平等, 公共政策, 友善设施, 社会意识                                 |
+| Tags            | 性别友善, 高雄市, 观光旅游, 多元性别, CEDAW, LGBTQ+, 友善厕所, 友善旅宿, 性别平等                                 |
 
-本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有。
-
+本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有，所有内容仅为历史资料保存及研究之用。如果原作者或相关方希望移除存档内容，请通过电子邮件与我们联系。
 
 ## 正文 { data-search-exclude }
 
