--- a/政府及官方组织文件/港澳台/1997_關注婦女性暴力協會_性別承認諮詢意見書_page.md
+++ b/政府及官方组织文件/港澳台/1997_關注婦女性暴力協會_性別承認諮詢意見書_page.md
@@ -7,9 +7,11 @@
 ## 摘要
 
 <!-- tcd_abstract -->
-该文件为关注女性暴力协会就性别承认跨部门工作小组的《性别承认咨询文件》所提出的意见书。文件详细阐述了性别承认制度的重要性，强调性别承认是一种人权，所有跨性别人士的选择权应被尊重。文件中提出了对16个咨询问题的回应，包括是否应为香港设立性别承认制度、在性别承认中订立医学诊断的规定、性别承认应该涵盖的医疗条件等。
+本文件为《性别承认咨询文件》的意见书，由关注女性暴力协会提交，以回应政府对于性别承认的咨询。文件指出，性别承认是一项基本人权，强调跨性别者的选择权应当受到尊重。关注女性暴力协会成立于1997年，致力于促进性别平等与对抗性暴力，这份意见书是在2005年成立的Anti-480反性暴力资源中心的背景下提出的。文件中提到，香港的性别问题并非简单的二元对立，而是涉及到社会文化和个人心理，因此，不能忽略那些性别少数群体的权利被剥夺这一现实。
 
-协会认为，性别不应仅以二元方式处理，性别不安并不是疾病，提出法律上应允许跨性别人士在无须必须进行医学干预的情况下获得法律承认。文件中还对性别承认的申请流程及必要条件提出了建议，强调任何医疗选择权应尊重个体差异，任何人都不应因状态而被迫接受医疗程序。此文件在讨论多元性别与法律的交汇点时，呼吁建立一个更加包容与理解的社会环境。
+文件详尽地讨论了关于香港是否应设立性别承认制度的看法，认为认同和尊重性别的多样性是社会的基本要求。具体而言，文件中提到“性别不安并非一种疾病”。通过逐条回应16个咨询问题，文件明确表示，任何医疗程序不应作为变更性别的先决条件，个人的医疗选择权应得到保障。意见书中对性别承认过程的具体规定进行了说明，包括针对“实际生活体验”的要求，建议应改为“冷静期”，以便人们在申请后有一定时间进行反思，而不应强加具体的生活标准。同时，文中认为，将性别认可与家庭、婚姻状况捆绑在一起是不合理的，已婚跨性别者应保留继续婚姻的权利。
+
+此外，对于性别承认制度的成立过程，文件建议香港应当设立新法例来系统化这一过程，以确保跨性别者的权利能够在法律上得到充分保障。文件认为，英美等国的性别承认机制在某种程度上可以为香港提供参考，但同时也指出，应当摒弃列出入侵性医疗程序的要求。最后，文件强调，性别承认应承认各地的性别改动，并且各相关机构和专业人士需参与创建一个公正、透明的制度，以保障所有人的基本权利。
 
 <!-- tcd_abstract_end -->
 
@@ -27,10 +29,9 @@
 | Author          | 关注女性暴力协会                               |
 | Region          | 香港                               |
 | Date            | 2017-12-31                                 |
-| Tags            | 性别承认, 跨性别, 女性暴力, 人权, 社会政策, 性别平等, 医疗选择权                                 |
+| Tags            | 性别承认, 跨性别, 性别平等, 女性暴力, 法律政策, 社会环境, 医疗资源, 人权                                 |
 
-本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有。
-
+本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有，所有内容仅为历史资料保存及研究之用。如果原作者或相关方希望移除存档内容，请通过电子邮件与我们联系。
 
 ## 正文 { data-search-exclude }
 
