--- a/政府及官方组织文件/港澳台/PDF_CB420917-1819_-_立法會_page.md
+++ b/政府及官方组织文件/港澳台/PDF_CB420917-1819_-_立法會_page.md
@@ -7,7 +7,11 @@
 ## 摘要
 
 <!-- tcd_abstract -->
-该文件为公民党就香港《性别承认法》的意见书，文件详细探讨了跨性别人士在法律上的地位，尤其是在婚姻和性别认同方面所面临的挑战。文件引用了2013年W诉婚姻登记官案中的判决，强调已完成性别重置手术的变性人士在婚姻方面的权利，并指出香港作为国际社会的一部分，应借鉴英国2004年《性别承认法令》的相关内容，跟进立法萧条的问题。文件中提到跨性别人士在香港的社会地位、法律保障和生存现状，强调必须建立独立于性别重置手术之外的法律承认体系，以避免对跨性别人士的强制绝育和身体完整性侵犯，并指出国际上对跨性别权利的逐步推进。公民党主张应尽快制定《性别承认法》，并重新审视双性人群体的性别承认问题。
+该文件为香港公民党就《性别承认法》提交的意见书，主要围绕跨性别人士的法律承认、社会环境及政策建议进行讨论。文件中提到，2013年香港终审法院在W诉婚姻登记官案中裁定，已接受性别重置手术的变性人士有权与异性结婚，这一裁定强调了香港对跨性别人士权益的关注。然而，这份意见书指出，尽管有法院的裁决，香港政府在性别立法方面的行动进展依然缓慢，至2017年才交出首份性别承认问题的咨询文件。在咨询过程中，公民党呼吁政府参考英国的《2004年性别承认法令》，以更好地解决跨性别人士在法律上的地位及其所面临的困难。
+
+意见书还探讨了跨性别人士在社会上遭遇的障碍，强调由于社会对跨性别人士的不理解，导致了广泛的歧视现象，进而影响了他们的生活和工作。文件引用了多项国际人权法的例子，指出强制进行性别重置手术在国际上被视为一种侵害，呼吁香港不应以此作为法律承认的前提。特别是，文件中提到2017年一名跨性别人士自杀事件，突显了社会对于跨性别身份缺乏尊重和理解的严重后果。
+
+文件还引用了各种国际和本地法律案例，如高阶入境事务主任的案件，表明现行法律对跨性别人士的保护不足，甚至可能形成间接歧视。公民党要求对《性别承认法》的立法不应强制要求完成性别重置手术，为跨性别人士的合法性提供应有的支持及保障。文件多次强调，跨性别人士所面对的法律与社会障碍，亟待改善，以确保他们得到平等待遇，不受歧视。
 
 <!-- tcd_abstract_end -->
 
@@ -24,11 +28,10 @@
 | Original Link   | [https://www.legco.gov.hk/yr17-18/chinese/panels/ajls/papers/ajls20171120cb4-209-19-c.pdf](https://www.legco.gov.hk/yr17-18/chinese/panels/ajls/papers/ajls20171120cb4-209-19-c.pdf)                         |
 | Author          | 公民党                               |
 | Region          | 香港                               |
-| Date            | 2017-10-01                                 |
-| Tags            | 性别承认法, 跨性别权利, 婚姻平权, 香港法律, 国际人权, 公共政策                                 |
+| Date            | 2017-03-01                                 |
+| Tags            | 性别承认法, 跨性别, 法律政策, 社会环境, 香港, 公民权利                                 |
 
-本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有。
-
+本文由跨性别中文数字档案馆归档整理，仅供存档使用。版权归原作者所有，所有内容仅为历史资料保存及研究之用。如果原作者或相关方希望移除存档内容，请通过电子邮件与我们联系。
 
 ## 正文 { data-search-exclude }
 
