make everytrhing 中国大陆

--- a/学术文献/法律/2021年中国跨性别权利公众舆论报告_page.md
+++ b/学术文献/法律/2021年中国跨性别权利公众舆论报告_page.md
@@ -27,7 +27,7 @@
 | Archived Date   | 2024-11-23 05:24:34                             |
 | Original Link   | [https://williamsinstitute.law.ucla.edu/wp-content/uploads/Public-Opinion-Trans-China-English-Jun-2021.pdf](https://williamsinstitute.law.ucla.edu/wp-content/uploads/Public-Opinion-Trans-China-English-Jun-2021.pdf)                         |
 | Author          | Winston Luhur, Taylor N.T. Brown, Mingke Liu, Ari Shaw                               |
-| Region          | 中国                               |
+ | Region          | 中国大陆                               |
 | Date            | 2021-06-01                                 |
 | Tags            | 跨性别权利, 公众舆论, 社会态度, 法律政策, 数据统计, 生存现状, 家庭接受度                                 |
 
