--- a/政府及官方组织文件/联合国/联合国人权理事会赤贫与人权问题特别报告员访华报告_2017_page.md
+++ b/政府及官方组织文件/联合国/联合国人权理事会赤贫与人权问题特别报告员访华报告_2017_page.md
@@ -23,7 +23,7 @@
 | Archived Date   | 2024-11-23 03:29:38                             |
 | Original Link   | [https://digitallibrary.un.org/record/1298742/files/A_HRC_35_26_Add.2-ZH.pdf](https://digitallibrary.un.org/record/1298742/files/A_HRC_35_26_Add.2-ZH.pdf)                         |
 | Author          | 联合国人权理事会                               |
-| Region          | 中国                               |
+ | Region          | 中国大陆                               |
 | Date            | 2017-03-28                                 |
 | Tags            | 赤贫, 人权, 联合国, 社会政策, 贫困, 法律, 跨性别, 多元性别, 经典报告, 社会调查, 国际人权                                 |
 
