--- a/学术文献/医学/亚洲男性学杂志_2013年15卷2期_精子质量与男性生殖健康研究文献汇总_page.md
+++ b/学术文献/医学/亚洲男性学杂志_2013年15卷2期_精子质量与男性生殖健康研究文献汇总_page.md
@@ -29,7 +29,7 @@
 | Archived Date   | 2025-01-18                             |
 | Original Link   | [Unknown link(update needed)]                         |
 | Author          | 王一飞教授；亚洲男性学杂志主办单位                               |
-| Region          | 中国                               |
+ | Region          | 中国大陆                               |
 | Date            | 2013-02-01                                 |
 | Tags            | 男性生殖健康, 精子质量, 环境污染, 内分泌干扰物, 男性不育, 生物学研究, 公共健康                                 |
 
