--- a/政府及官方组织文件/联合国/中国性少数群体生存状况调查报告_2016_page.md
+++ b/政府及官方组织文件/联合国/中国性少数群体生存状况调查报告_2016_page.md
@@ -23,7 +23,7 @@
 | Archived Date   | 2024-11-03 05:29:57                             |
 | Original Link   | [https://www.undp.org/sites/g/files/zskgke326/files/migration/cn/UNDP-CH-PEG-Being-LGBT-in-China_CH.pdf](https://www.undp.org/sites/g/files/zskgke326/files/migration/cn/UNDP-CH-PEG-Being-LGBT-in-China_CH.pdf)                         |
 | Author          | 联合国开发计划署                               |
-| Region          | 中国                               |
+ | Region          | 中国大陆                               |
 | Date            | 2016-01-01                                 |
 | Tags            | 跨性别, 性少数群体, 社会调查, 法律政策, 生存现状, 人权保障, 社会环境, 心理健康, 文化教育                                 |
 
